[metadata]
name = nextcloud-status
version = 0.1.0
description = A CLI tool for updating NextCloud status
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/nextcloud-status
license = MIT

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    requests
    typer

[options.entry_points]
console_scripts =
    nextcloud-status = nextcloud_status.nextcloud_status:main
